--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			
 			<nav>
 				<ul>
-					<li><a href="BoPIndex"> 99 BoP Assignment</a></li>
+					<li><a href ="#">Assignment 1 </a></li>
 					<li><a href ="#">Assignment 2 </a></li>	
 					<li><a href ="#">Assignment 3 </a></li>
 					<li><a href ="#">Assignment 4 </a></li>
@@ -30,15 +30,15 @@
 			</nav>
 			
 			<aside>
-			<p>Please check out my hard work in the tab above</p>
+			<h1>Please check out my hard work in the tab above</h1>
 			</aside>
 			
 			<section>
-			<h2>Hello, My name is Nik Rinck and I am the owner/operator of this website. I am currently a highschool senior in the Computer Programing & Game Design/ I.T. Acadamy Lab at Four County Career Center in Archbold, Ohio on State Route 34. In this lab I have created games, learned computer languages, and learned how to build a PC system through a cross lab course with the other computer lab. My future is bright with many opertunites from my lab and the fact that I.T. is a fastly growing job market. I can earn many certificiates and awards in my lab to ensure my success in the near and distant future. I have learned  to hone my creative spark in order to solve complex problems relating to I.T.and how to manage different types of computer systems like linix, windows, mac, and more. I would recommend going to Four County Career Center in this lab if you like software and want to learn how it works. I would recommnd comming if you want to learn different coding languages in this very lucrative job market. I will warn you that sometimes it gets a bit dry and boring and a little hard, but with some persistance you are almost certain to get a good job right out of Four County even if you don't go to college. This class is the college course, so you can even get college credit just for doing the class normaly like everyone else. Lastly I wanted to say thanks for reading my little intro paragraph :) </h2>
+			<h3>Hello, My name is Nik Rinck and I am the owner/operator of this website. I am currently a highschool senior in the Computer Programing & Game Design/ I.T. Acadamy Lab at Four County Career Center in Archbold, Ohio on State Route 34. In this lab I have created games, learned computer languages, and learned how to build a PC system through a cross lab course with the other computer lab. My future is bright with many opertunites from my lab and the fact that I.T. is a fastly growing job market. I can earn many certificiates and awards in my lab to ensure my success in the near and distant future. I have learned  to hone my creative spark in order to solve complex problems relating to I.T.and how to manage different types of computer systems like linix, windows, mac, and more. I would recommend going to Four County Career Center in this lab if you like software and want to learn how it works. I would recommnd comming if you want to learn different coding languages in this very lucrative job market. I will warn you that sometimes it gets a bit dry and boring and a little hard, but with some persistance you are almost certain to get a good job right out of Four County even if you don't go to college. This class is the college course, so you can even get college credit just for doing the class normaly like everyone else. Lastly I wanted to say thanks for reading my little intro paragraph :) </h2>
 			</section>
 			
 			<footer>
-			Created and operated by Nik Rinck&reg;
+			Copyright © Nik Rinck 2020
 			</footer> 
 			
 			
