--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			
 			<nav>
 				<ul>
-					<li><a href ="#">Assignment 1 </a></li>
+					<li><a href ="bottlesIndex">99 Bottles Assignment</a></li>
 					<li><a href ="#">Assignment 2 </a></li>	
 					<li><a href ="#">Assignment 3 </a></li>
 					<li><a href ="#">Assignment 4 </a></li>
