--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		
-		<title><p>Web Page</p></title>
+		<title>Web Page</title>
 		<meta name="description" content= "Nik_Rinck's_Javascript_project_webpage">
 		<meta name="keywords" content="Nik,Rinck,Nik_Rinck,JavaScript,HTML,CSS">
 		<meta name="author" content="Nik Rinck">
