--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			
 			<nav>
 				<ul>
-					<li><a href ="bottlesIndex">99 Bottles Assignment</a></li>
-					<li><a href ="#">Assignment 2 </a></li>	
+					<li><a href ="bottlesIndex.html">99 Bottles Assignment</a></li>
+					<li><a href ="battleship.html">Battleship</a></li>	
 					<li><a href ="#">Assignment 3 </a></li>
 					<li><a href ="#">Assignment 4 </a></li>
 					<li><a href ="#">Assignment 5 </a></li>
