--- a/battleship.html
+++ b/battleship.html
@@ -2,12 +2,24 @@
 <html lang="en">
 
 	<head>
-	
-		<title>Battleship</title>
 		<meta charset="utf-8">
+		<title>Battleship</title>
+		<link href = "battleship.css" rel="stylesheet"/>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="bottlesIndex">99 Bottles</a></li>
+		</ul>
 	</head>
+	
 	<body>
+		<div id = "container">
+		<nav>
+		
+		
 		<h1>Play battleship!</h1>
+		<br>
 		<script src="battleship.js"></script>
+		
 	</body>
+	</div>
 </html>
