--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 				<ul>
 					<li><a href ="bottlesIndex.html">99 Bottles Assignment</a></li>
 					<li><a href ="battleship.html">Battleship</a></li>	
-					<li><a href ="#">Assignment 3 </a></li>
-					<li><a href ="#">Assignment 4 </a></li>
-					<li><a href ="#">Assignment 5 </a></li>
+					<li><a href ="thingAMaJig.html">Thing-A-Ma-Jig Assignment</a></li>
+					<li><a href ="Bubbles.html">Bubbles Assignment</a></li>
+					<li><a href ="Phrase-O-Matic.html">Phrase-O-Matic Assignment</a></li>
+					<li><a href ="fiatProject.html">Fiat Assignment</a></li>
 				</ul>
 			</nav>
 			
